--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat May 29 18:11:25 IST 2021
-sdk.dir=/Users/prathamwanmode/Library/Android/sdk
+#Thu Jun 17 11:36:02 IST 2021
+sdk.dir=C\:\\Users\\DRAKH\\AppData\\Local\\Android\\Sdk
